feat: added environment specific config

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@
 # ENVIRONMENT CONFIGURATION
 # =================================
 # Choose one: development, testnet, mainnet
-# Copy this file to .env and update values accordingly
-# Use .env.development, .env.testnet, or .env.mainnet as templates
 NODE_ENV=development
 
 # =================================
@@ -17,7 +15,6 @@ API_VERSION=v1
 # =================================
 # LOGGING CONFIGURATION
 # =================================
-# Log levels: error, warn, info, http, verbose, debug, silly
 LOG_LEVEL=debug
 LOG_DIRECTORY=./logs
 LOG_MAX_FILES=14d
@@ -26,7 +23,6 @@ LOG_MAX_SIZE=20m
 # =================================
 # CORS CONFIGURATION
 # =================================
-# Comma-separated list of allowed origins
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 CORS_CREDENTIALS=true
 
@@ -36,7 +32,7 @@ CORS_CREDENTIALS=true
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
-DATABASE_PASSWORD=your-secure-password-here
+DATABASE_PASSWORD=your-secure-password
 DATABASE_NAME=stellarswipe
 DATABASE_LOGGING=false
 
@@ -51,53 +47,29 @@ REDIS_PASSWORD=
 # =================================
 # STELLAR NETWORK CONFIGURATION
 # =================================
-# Network: testnet or mainnet
+# Use 'testnet' or 'public'
 STELLAR_NETWORK=testnet
-
-# Testnet URLs
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 STELLAR_SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
 STELLAR_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
-
-# Mainnet URLs (use when STELLAR_NETWORK=mainnet)
-# STELLAR_HORIZON_URL=https://horizon.stellar.org
-# STELLAR_SOROBAN_RPC_URL=https://soroban-rpc.stellar.org
-# STELLAR_NETWORK_PASSPHRASE=Public Global Stellar Network ; September 2015
-
-# API Configuration
 STELLAR_API_TIMEOUT=30000
 STELLAR_MAX_RETRIES=3
 
 # =================================
 # JWT CONFIGURATION
 # =================================
-# IMPORTANT: Use a strong secret (minimum 32 characters)
-# Generate with: openssl rand -base64 32
-JWT_SECRET=change-this-to-a-secure-random-string-minimum-32-characters-long
+JWT_SECRET=your-32-character-plus-secret-key-goes-here
 JWT_EXPIRES_IN=7d
 
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
-CORS_CREDENTIALS=true
-
-# xAI Configuration
-XAI_API_KEY=your_xai_api_key_here
+# =================================
+# xAI CONFIGURATION
+# =================================
+XAI_API_KEY=your-xai-api-key
 XAI_MODEL=grok-2-1212
 
 # =================================
 # SENTRY CONFIGURATION (Optional)
 # =================================
-# Error tracking - Get your DSN from https://sentry.io
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
 SENTRY_TRACES_SAMPLE_RATE=0.1
-
-# =================================
-# ENVIRONMENT-SPECIFIC NOTES
-# =================================
-# Development: Use .env.development as template
-# Testnet: Use .env.testnet as template
-# Mainnet: Use .env.mainnet as template
-#
-# NEVER commit actual .env files to version control!
-# Store production secrets in AWS Secrets Manager or similar service
